second test commit

--- a/styles.css
+++ b/styles.css
@@ -8,20 +8,21 @@ body {
 }
 
 .qr-image {
+    display: block;
     width: 90%;
-    padding:1rem;
-    /* margin: 1rem; */
-    border-radius: 1rem;
-    margin-bottom: 1rem;
+    padding:5%;
+    border-radius: 1.25rem;
 }
 
 .card-body {
-    max-width: 20rem;
+    max-width: 18rem;
     display: flex;
     flex-direction: column;
     background-color: hsl(0, 0%, 100%);
     /* width: 5rem; */
     border-radius: 1rem;
+    /* justify-content: center; */
+    align-items: center;
 }
 
 .attribution {
@@ -40,6 +41,7 @@ body {
     font-weight: 700;
     color :hsl(218, 44%, 22%);
     font-size: 17px;
+    /* margin-top: 0; */
 }
 
 .main-paragraph {
@@ -49,4 +51,11 @@ body {
     font-weight: 400;
     color: hsl(216, 15%, 48%);
     font-size: 15px;
+}
+
+.outfit-font {
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style:normal;
 }
