--- a/styles.css
+++ b/styles.css
@@ -35,13 +35,12 @@ body {
 }
 
 .main-heading {
-    font-size: 1.5rem;
     margin: 1rem;
     text-align: center;
     font-weight: 700;
     color :hsl(218, 44%, 22%);
-    font-size: 17px;
-    /* margin-top: 0; */
+    font-size: 18px;
+    margin-bottom: 0;
 }
 
 .main-paragraph {
@@ -51,6 +50,7 @@ body {
     font-weight: 400;
     color: hsl(216, 15%, 48%);
     font-size: 15px;
+    margin-bottom: 2rem;
 }
 
 .outfit-font {
